@@ -28,7 +28,6 @@ import com.denimgroup.threadfix.exception.RestIOException;
 import com.denimgroup.threadfix.exception.RestUrlException;
 import com.denimgroup.threadfix.logging.SanitizedLogger;
 import com.denimgroup.threadfix.service.ProxyService;
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.httpclient.HttpClient;
 import org.apache.commons.httpclient.methods.GetMethod;
 import org.apache.commons.io.IOUtils;
@@ -37,6 +36,7 @@ import org.springframework.web.context.support.SpringBeanAutowiringSupport;
 
 import javax.annotation.Nonnull;
 import javax.net.ssl.SSLHandshakeException;
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStreamWriter;
@@ -232,8 +232,8 @@ public class RestUtilsImpl<T> extends SpringBeanAutowiringSupport implements Res
 	private void setupAuthorization(HttpURLConnection connection,
 			String username, String password) {
 		String login = username + ":" + password;
-		String encodedLogin = new String(Base64.encodeBase64(login.getBytes()));
-		//String encodedLogin = Base64.encodeBase64String(login.getBytes());
+
+		String encodedLogin = DatatypeConverter.printBase64Binary(login.getBytes());
 		connection.setRequestProperty("Authorization", "Basic " + encodedLogin);
 	}
 
